# inmueblebot

./:  (2).gitignore  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BOT_DOCUMENTATION.md  Dockerfile  GOOGLE_AUTH_SESSION_PLAN.md  GOOGLE_CALENDAR_SETUP.md  GO_TO_MARKET_PLAN.md  HERMES_AGENT_GUIDE.txt  How-MiniMax-Tool-Calling-Works.md  Hybrid_refactor.md  Inmobot_Funcionalidades.docx  LAUNCH_ALL.bat  LAUNCH_LOCAL.bat  LOCALITIES_MISIONES.md  LOGIN_UNIFICATION_PLAN.md  MERGE_PLAN.md  NOTIFICATION_ICONS.md  PRODUCTION_AUDIT.md  PRODUCTION_LAUNCH_CHECKLIST.md  QUICK_START.bat  README.md  Render_example.txt  SAAS_IMPLEMENTATION_PLAN.md  SELLING_FUNNEL_FRAMEWORK.md  STRESS_TEST_FIX_PLAN.md  TEST_CASES.md  TEST_PROGRESS.md  TEST_USERS.md  TO-DOv1.md  TO-DoChatbot.md  TODO_PLANES_PRO_ENTERPRISE.md  UX_ELEVATION_ROADMAP.md  alembic.ini  angelo-hard-test-conversations-150.md  angelo-hard-test-conversations.md  angelo-style-analysis.md  (+39 more)
.hermes/: check_syntax.py
ImplementacionesWIP/: 01_clientes-acciones-y-pestana-propiedades.md  02_propiedades-atajo-vincular-inquilino.md  03_log-actividad-unificado.md  04_gestion-operaciones-inmobiliarias.md  04_superadmin-base-y-acceso-cross-tenant.md  05_superadmin-explorador-global-cross-tenant.md  06_superadmin-analitica-visual-y-textual.md  07_error-reporting-in-app-y-pestana-superadmin.md  08_tiers-planes-backend.md  09_flujo-saas-frontend.md  10_fix-bypass-paywall-candado-nav.md  11_formato-numerico-modal-contrato.md  12_enviar-correo-desde-app.md  13_faq-ux-wizard-guiado.md  14_propiedades-ux-wizard-y-tutorial.md  15_importacion-asistida-propiedades.md  16_config-backend-gaps.md  17_config-ui-rebuild-handoff.md  18_facturacion-seguridad-checkout.md  19_facturacion-historial-y-uso.md  20_hablar-con-ventas-enterprise.md  21_fixes-visuales-darkmode-y-modal.md  22_gating-candado-enterprise-audit.md  23_config-cleanup-sistema-y-equipo.md  35_faq-dedup-ejemplos.md  (+23 more)
(+578 files in other folders)
